<resources>
    <string name="app_name">Rock Quiz</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="already_a_user_sign_in">Already a user? Sign in</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="user_avatar_image">User Avatar Image</string>
    <string name="change_avatar"><u>Change Avatar</u></string>
    <string name="display_name">Display name:</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="save">Save</string>
    <string name="sign_out"><u>Sign out</u></string>
    <string name="play">Play</string>
    <string name="profile">Profile</string>
    <string name="for_logo_questions">For Logo Questions</string>
    <string name="level_overview">Level overview:</string>
    <string name="game_overview">Game overview:</string>
    <string name="username">username</string>
</resources>