<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_out"
        android:textSize="15sp"/>

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_person_outline_100"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/user_avatar_image"
        android:maxWidth="100dp"
        android:maxHeight="100dp"/>

    <TextView
        android:id="@+id/change_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/avatar"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/change_avatar"
        android:textSize="20sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/display_name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/display_name"
        android:layoutDirection="ltr"
        android:layout_below="@+id/change_avatar"
        app:counterEnabled="true"
        app:counterMaxLength="15">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/display_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textDirection="ltr"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/display_name_input_layout"
        android:layout_centerHorizontal="true"
        android:text="@string/save"/>

    <include
        android:id="@+id/profile_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/app_bar_layout"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>