<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".RegisterActivity">

    <!-- Email -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_alignParentTop="true"
        android:hint="@string/email"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/lightBlue"
        android:layoutDirection="ltr">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textDirection="ltr"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Username -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@+id/email_input_layout"
        android:hint="@string/username"
        app:startIconTint="@color/lightBlue"
        android:layoutDirection="ltr">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="20"
            android:textDirection="ltr"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@+id/username_input_layout"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        android:layoutDirection="ltr">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textDirection="ltr"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Confirm password -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@id/password_input_layout"
        android:hint="@string/confirm_password"
        app:endIconMode="password_toggle"
        android:layoutDirection="ltr">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textDirection="ltr"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/signup"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightBlue"
        android:layout_margin="5dp"
        android:layout_below="@id/confirm_password_input_layout"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/go_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/signup"
        android:layout_centerHorizontal="true"
        android:text="@string/already_a_user_sign_in"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorAccent" />
</RelativeLayout>