<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginfragmentlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:background="#FFFFFF"
    android:elevation="21dp"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/welcome_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:layout_margin="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/email"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/lightBlue"
        android:layoutDirection="ltr">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textDirection="ltr"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        android:layoutDirection="ltr">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textDirection="ltr"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/lightBlue"
        android:layout_margin="5dp"
        android:text="@string/login" />

</android.widget.LinearLayout>